--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="db_error">加载数据库错误</string>
     <string name="check_all">全选</string>
     <string name="delete">删除</string>
+    <string name="title_activity_reader">ReaderActivity</string>
 </resources>
