--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="all_love_search">大家都在搜</string>
     <string name="replace">换一批</string>
     <string name="search_history">搜索历史</string>
+    <string name="accurate_search">没有你想要的小说,点击精确搜索</string>
 </resources>
