添加主题书单页面 ， 获取主题书单标签

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     <string name="replace">换一批</string>
     <string name="search_history">搜索历史</string>
     <string name="accurate_search">没有你想要的小说,点击精确搜索</string>
+    <string name="title_activity_theme_book">ThemeBookActivity</string>
+    <string name="theme_book">主题书单</string>
+    <string name="screening">筛选</string>
 </resources>
