--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="screening">筛选</string>
     <string name="title_activity_book_list_detail">BookListDetailActivity</string>
     <string name="bookList_detail">书单详情</string>
+    <string name="share">分享</string>
 </resources>
