--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_activity_book_detail">BookDetailActivity</string>
     <string name="book_detail">书籍详情</string>
     <string name="update">追更新</string>
+    <string name="no_chase">不追了</string>
     <string name="start_read">开始阅读</string>
     <string name="read_conut">追书人数</string>
     <string name="reader_liu">读者留存率</string>
@@ -63,4 +64,6 @@
     <string name="book_read_settings">设置</string>
     <string name="book_read_download">缓存</string>
     <string name="book_read_toc">目录</string>
+    <string name="remove_book">已移除</string>
+    <string name="add_book">已添加</string>
 </resources>
