添加根据作者查询书籍

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="book_read_toc">目录</string>
     <string name="remove_book">已移除</string>
     <string name="add_book">已添加</string>
+    <string name="title_activity_author">AuthorActivity</string>
 </resources>
